--- a/TextEditor/src/main/resources/fxml/TextEditorLayout.fxml
+++ b/TextEditor/src/main/resources/fxml/TextEditorLayout.fxml
@@ -20,7 +20,7 @@
             <SeparatorMenuItem mnemonicParsing="false" />
             <MenuItem mnemonicParsing="false" onAction="#Save" text="Save" />
             <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" onAction="#Exit" text="Quit" />
+            <MenuItem id="Exit" mnemonicParsing="false" onAction="#Exit" text="Exit" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Edit">
@@ -53,7 +53,7 @@
     </MenuBar>
       <StackPane VBox.vgrow="ALWAYS">
          <children>
-            <TextArea prefHeight="200.0" prefWidth="200.0">
+            <TextArea fx:id="TA" prefHeight="200.0" prefWidth="200.0">
                <font>
                   <Font size="13.0" />
                </font></TextArea>
